--- a/AOC2019_D18_new/AOC2019_D18_new.vcxproj.filters
+++ b/AOC2019_D18_new/AOC2019_D18_new.vcxproj.filters
@@ -22,4 +22,12 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="PawnFramework.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="DataStructs.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
