--- a/AOC2019_D18_new/AOC2019_D18_new.vcxproj
+++ b/AOC2019_D18_new/AOC2019_D18_new.vcxproj
@@ -143,6 +143,10 @@
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="DataStructs.h" />
+    <ClInclude Include="PawnFramework.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
